After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 719589 - process tree column order not saved
process tree column order not saved
Status: RESOLVED FIXED
Product: system-monitor
Classification: Core
Component: process list
3.10.x
Other Linux
: Normal normal
: ---
Assigned To: System-monitor maintainers
System-monitor maintainers
Depends on:
Blocks:
 
 
Reported: 2013-11-30 09:37 UTC by Edward Sheldrake
Modified: 2013-12-02 22:30 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix process tree column order saving (781 bytes, patch)
2013-11-30 09:42 UTC, Edward Sheldrake
committed Details | Review

Description Edward Sheldrake 2013-11-30 09:37:06 UTC
I've noticed that the column order of the process tree isn't being saved. I move the ID column to be the first column on the left, but the order doesn't get saved, so next time I open gnome-system-monitor, the ID column is back in the middle.
Comment 1 Edward Sheldrake 2013-11-30 09:42:16 UTC
Created attachment 263197 [details] [review]
Fix process tree column order saving
Comment 2 Robert Roth 2013-12-02 22:30:09 UTC
Review of attachment 263197 [details] [review]:

Thanks for the patch, tested and committed, looks good, works OK.
Comment 3 Robert Roth 2013-12-02 22:30:22 UTC
This problem has been fixed in the development version. The fix will be available in the next major software release. Thank you for your bug report.