Fix process tree column order saving

https://bugzilla.gnome.org/show_bug.cgi?id=719589